--- a/succession.rmd
+++ b/succession.rmd
@@ -7,7 +7,8 @@ editor_options:
   chunk_output_type: console
 ---
 ![](succession_files/figure-markdown_github/sucesion_stand_dev0_100.png)
-(Es recomendable usar "crtl. click" al pulsar en los enlaces, abriéndolos así en pestañas nuevas; la opción no es configurable en origen en GitHub el momento de escribir esto.)
+
+(Es recomendable usar **"crtl. click" al pulsar en los enlaces**, abriéndolos así en pestañas nuevas; la opción no es configurable en origen en GitHub el momento de escribir esto.)
 
 ### Un modelo analítico de sucesión
 Estos modelos son simplificaciones de los procesos reales, pero permiten fijarse en los aspectos básicos de la dinámica de sustitución de especies, y compararla entre distintas comunidades, o vías de sucesión. 
