--- a/stages.Rmd
+++ b/stages.Rmd
@@ -24,7 +24,7 @@ Trabajamos con poblaciones en las que los individuos presentan características 
 
 ![](stages_files/figure-markdown_github/life_cycle_stage.png)
 
-Ese esquema genérico muestra una población modelada a partir de 4 tipos de individuos, agrupados en clases de edad o estadios. Las flechas indican las transiciones posibles entre dichas clases o estadios. A ese ciclo de vida le correspondería la visión numérica aportada por las matrices de transición:
+Ese esquema genérico muestra una población modelada a partir de 4 tipos de individuos, agrupados en clases de edad o estadios. Las flechas indican transiciones posibles entre dichas clases o estadios. A ese ciclo de vida le correspondería la visión numérica aportada por las matrices de transición:
 
 ![](stages_files/figure-markdown_github/structured_matrices.png)
 
